--- a/excerpts_20220810.md
+++ b/excerpts_20220810.md
@@ -26,6 +26,6 @@
 - **defective**(adj.): flawed or not functioning properly
 - **futile**(adj.): in vain
 - **vestige**(n.): trace/track/trailing/sign
-- **preposterous**(adj.): ridiculous/absurd/nonsensical/insane/**ludicrous**
+- **preposterous**(adj.): ridiculous/absurd/**nonsensical**/insane/**ludicrous**
 - **hubris**(n.): cocky or **conceited** or **puffed up** or arrogant or very **complacent** man/magalomania
 - **obscenity**(n.): bawdy/salacious/smut
